--- a/client/index.jade
+++ b/client/index.jade
@@ -2,14 +2,14 @@ doctype html
 html(lang='en', ng-app='day-trader')
   head
     meta(charset='utf-8')
-    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(meta http-equiv='X-UA-Compatible' content="IE=edg)
     meta(name='viewport', content='width=device-width, initial-scale=1')
     title Day Trader
     link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/slate/bootstrap.min.css')
     link(rel='stylesheet', href='/vendor/font-awesome/css/font-awesome.min.css')
     link(rel='stylesheet', href=isProd ? '/index.min.css' : '/index.css')
     link(rel='shortcut icon', href='/favicon.ico')
-  body(ng-controller='master', novalidate)
+  body(ng-controller='master')
     .jumbotron
       .welcomeHolder
         h1 Welcome {{user.name}},
@@ -18,41 +18,44 @@ html(lang='en', ng-app='day-trader')
     .container-fluid
       .row(ng-hide='setupBar')
         .col-xs-12 
-            nav.navbar.navbar-inverse
-              .navbar-header
-                form.navbar-form.navbar-left(role='search')
-                  .form-group
-                    input.form-control(type='text', placeholder='Name', ng-model='user.name')
-                    input.form-control(type='number', placeholder='$10,000', ng-model='user.capital')
-                    button.btn.btn-default(type='submit', ng-click='addUser()')  Submit
+          nav.navbar.navbar-inverse
+            .navbar-header
+              form.navbar-form.navbar-left(role='search')
+                .form-group
+                  input.form-control(type='text', placeholder='Name', ng-model='user.name')
+                  input.form-control(type='number', placeholder='$10,000', ng-model='user.capital')
+                  button.btn.btn-default(type='submit', ng-click='addUser()')  Submit
                 
       .row(ng-show='setupBar')
         .col-xs-12  
-            nav.navbar.navbar-inverse
-              .navbar-header
-              #bs-example-navbar-collapse-2.collapse.navbar-collapse
-                
-                form.navbar-form.navbar-left(role='search')
-                  .form-group
-                    input.form-control(type='text', placeholder='Technology', ng-model='portfolio.name')
-                    button.btn.btn-default(type='submit', ng-click='addPortfolio()') Add Portfolio
-                    input.form-control(type='text', placeholder='AAPL', ng-model='portfolio.stock.symbol')
-                    input.form-control(type='number', ng-model='portfolio.stock.amount')
-                    button.btn.btn-default(type='submit', ng-click='buyShares()')  Buy Shares
-                
-                ul.nav.navbar-nav
-                  li.dropdown
-                    a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false') Your Portfolios 
-                      ul.dropdown-menu(role='menu')
-                          li: a(href='#') Test
-                          li: a(href='#') Test
-                          li: a(href='#') Test
-                          
-                          
-                
-                ul.nav.navbar-nav.navbar-right
-                  li
-                    a(href='#', ng-click='swapBar()') Log Out
+          nav.navbar.navbar-inverse
+            .navbar-header
+            #bs-example-navbar-collapse-2.collapse.navbar-collapse
+              
+              form.navbar-form.navbar-left(role='search')
+                .form-group
+                  input.form-control(type='text', placeholder='Technology', ng-model='portfolio.name')
+                  button.btn.btn-default(type='submit', ng-click='addPortfolio()') Add Portfolio
+                  input.form-control(type='text', placeholder='Symbol', ng-model='portfolio.stock.symbol')
+                  input.form-control(type='number', ng-model='portfolio.stock.amount')
+                  button.btn.btn-default(type='submit', ng-click='buyShares()')  Buy Shares
+              
+              ul.nav.navbar-nav
+                li.dropdown
+                  a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false') Your Portfolios 
+                    ul.dropdown-menu(role='menu', aria-labelledby="dLabel")
+                      li: a(href='#') Buff1
+                      li: a(href='#') Buff1
+                      li: a(href='#') Buff1
+                      li: a(href='#') Buff1
+                      li: a(href='#') Buff1
+                      li: a(href='#') Buff1
+                      li: a(href='#') Buff1
+                      
+                      //- li(ng-repeat='buffalo in buffalos track by $index') {{buffalo.name}}
+              ul.nav.navbar-nav.navbar-right
+                li
+                  a(href='#', ng-click='swapBar()') Log Out
       .row
         .col-md-4
           
